# mextk-rs

./: Cargo.toml
mextk/: Cargo.toml
mextk-hello-world/: Cargo.toml
mextk-hello-world/.cargo/: config
mextk-hello-world/src/: lib.rs
mextk-libc/: Cargo.toml
mextk-libc/src/: lib.rs
mextk-sys/: .gitignore  Cargo.toml  generate_bindings.sh
mextk-sys/src/: bindings.rs  lib.rs
mextk/src/: lib.rs
